app/assets/stylesheets/print.scss
@media print {
  main
  {
    margin-top: 0px;
  }
  .no-print,
  .dataTables_filter,
  .dataTables_info,
  .dataTables_paginate
  {
    display: none;
  }
  .print-only
  {
  }
  a[href]:after
  {
    content:""
  }

  table {
    tr {
      height:30px;
      font-size: 12pt;
      &.even {
        -webkit-print-color-adjust: exact;
        background: #dfdfdf !important;
      }
      td {
      }
    }
  }

}
@media screen {
  .print-only
  {
    display: none;
  }
}

